# synapse-hello

./: .gitignore  .mcpbignore  CLAUDE.md  Makefile  README.md  manifest.json  mpak.json  pyproject.toml  server.json
.github/workflows/: release.yml
src/mcp_hello/: __init__.py  server.py  ui.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
